syntax = "proto3";
package AuthRpc;
option go_package = "./AuthRpc";

service AuthService{
  rpc Authentication(AuthenticationReq) returns (AuthenticationResp){}//凭证验证
  rpc RefreshSession(RefreshSessionReq) returns(RefreshSessionResp){}//续约session
  rpc DeleteSession(DeleteSessionReq) returns (DeleteSessionResp){}//删除session
  rpc CreateVoucher(CreateVoucherReq) returns (CreateVoucherResp){} //凭证创建
}

message AuthenticationReq{
  string sessionId = 1;
  string token = 2;
}

message AuthenticationResp{
  bool pass = 1;
  string token = 2;
}

message RefreshSessionReq{
  string sessionId = 1;
}

message DeleteSessionReq{
  string sessionId=1;
}

message DeleteSessionResp{
}

message RefreshSessionResp{
  bool ok = 1;
  string token = 2;
}

message CreateVoucherReq{
  int64 userId =1;
}

message CreateVoucherResp{
  bool ok = 1;
  string sessionId = 2;
  string token = 3;
}

