syntax = "proto3";
package UserRpc;
option go_package = "./UserRpc";

service UserService{
  rpc Register(RegisterReq)returns (RegisterResp);
  rpc Login(LoginReq)returns(LoginResp);
  rpc Logout(LogoutReq)returns(LogoutResp);
}

message RegisterReq{
  string phone =1;
  string userName =3;
  string passWord =4;
}

message RegisterResp{
}

message LoginReq{
  string phone=1;
  string passWord=2;
}

message LoginResp{
  string sessionId=1;
  string token=2;
}

message LogoutReq{
  string sessionId=1;
}

message LogoutResp{
}

